securing the metadata client